# Formula-Student-AI

./: .gitignore  .gitmodules  README.md
YOLO/: YOLO.ipynb  data.yaml
YOLO/Dataset/: README.dataset.txt  README.roboflow.txt  data.yaml
YOLO/Dataset/test/labels/: accel2_mp4-0_jpg.rf.3b27749b10cefa1619fadce676e2a3ce.txt  accel2_mp4-10_jpg.rf.bff92a79c83293f6d1ebfd29eccffa4c.txt  accel2_mp4-11_jpg.rf.ed0a60408ee44624aa6603d5c1954bd5.txt  accel2_mp4-12_jpg.rf.ecf54a46d6e7309d9848fb2870aa94f7.txt  accel2_mp4-13_jpg.rf.52bd49fedeb9604ff6005aa0b1090d47.txt  accel2_mp4-13_jpg.rf.cf6546ea78cab05791c03dc9a52c833b.txt  accel2_mp4-14_jpg.rf.20b6988337f8f1af8ab9686a63d8569a.txt  accel2_mp4-15_jpg.rf.296761a72bb942d4afc790aa975afbf4.txt  accel2_mp4-16_jpg.rf.60aaf7b780d051d124b7a272af0feafa.txt  accel2_mp4-17_jpg.rf.9179c07e85cb91923009afd441a5d151.txt  accel2_mp4-18_jpg.rf.a2d5252083b95bc37dd36ca6a7ffcf9e.txt  accel2_mp4-19_jpg.rf.317214d020b2a614f387b5b2d84f9a5a.txt  accel2_mp4-1_jpg.rf.f45cf170adc8d19bca88e0a88f173c58.txt  accel2_mp4-20_jpg.rf.a07262ab6041c64a0109ec07bd087ba2.txt  accel2_mp4-21_jpg.rf.354fef3ed8dd63adf4538bc8545688ce.txt  accel2_mp4-22_jpg.rf.b77bffd8172bcff0cf501f8c1cc42185.txt  accel2_mp4-23_jpg.rf.0873dc426c66abbd5b635a2392a78211.txt  accel2_mp4-24_jpg.rf.c87749ab5cbd87ba6d11b9c55a86bd36.txt  accel2_mp4-2_jpg.rf.02b61bd3a211744614f06b2c1799e355.txt  accel2_mp4-3_jpg.rf.06c6b9104b40f8ac8e6dcc97d8386fd3.txt  accel2_mp4-4_jpg.rf.15600754e652e58348fd620ada70294a.txt  accel2_mp4-5_jpg.rf.b92a97f54221daa570c7cc907b43bb34.txt  accel2_mp4-6_jpg.rf.cb773897ab507d2de94523bb52819d1b.txt  accel2_mp4-7_jpg.rf.3cf440d756484e6293bfac629e0e488f.txt  accel2_mp4-8_jpg.rf.ca0450d8ac4d12df86ce0e6d2fbe7874.txt  accel2_mp4-9_jpg.rf.ea4b9f1e2f3196eac3c0ed8b53a96542.txt  accel_mp4-22_jpg.rf.13621ea2d15335346d5842210e2f4953.txt  accel_mp4-37_jpg.rf.dc007523cc9270a8110c36b277d164c0.txt  accel_mp4-4_jpg.rf.1f342878823a97a656fe0b3506459768.txt  autox2_mp4-18_jpg.rf.dd4be77d8f356cc353f33d38aeb20445.txt  autox2_mp4-21_jpg.rf.304697065a3a155aec43b0367922a718.txt  autox2_mp4-43_jpg.rf.9b888b613d5695692e216fbf667581b4.txt  autox2_mp4-49_jpg.rf.39bea825ad6cbe2ebe549bab0d8b73a6.txt  autox2_mp4-53_jpg.rf.ba28a2dbf4a40847d19ae8651d0a24af.txt  autox2_mp4-59_jpg.rf.2f93dcfcaec8cf41c4fdceb013c8ddd8.txt  autox2_mp4-70_jpg.rf.0a612ea9ae4280dd160f4b0913fc291c.txt  autox2_mp4-72_jpg.rf.687ade876b020af975ffe69cb3434985.txt  autox2_mp4-73_jpg.rf.0083fe012fbe2073d03b7a194b79c2a3.txt  autox2_mp4-74_jpg.rf.40bc13e4703396d65551a267ddf13d0b.txt  autox2_mp4-75_jpg.rf.5155ee4cafb4a214d81891bf17cd4685.txt  (+234 more)
YOLO/Dataset/train/labels/: accel2_mp4-0_jpg.rf.4d8d4546570b1af75e960b66be28b428.txt  accel2_mp4-0_jpg.rf.93346df853d86b1e67480f9444dd1dd8.txt  accel2_mp4-0_jpg.rf.b356019613a743306d1c0515bd9797e0.txt  accel2_mp4-10_jpg.rf.0e5102fb1a22adf570d29bbd6a4bbca0.txt  accel2_mp4-10_jpg.rf.283b2b691c1b16fe75d9bff096914f43.txt  accel2_mp4-10_jpg.rf.5c008b46eb3a0b0f916a81fe9c11b7c8.txt  accel2_mp4-11_jpg.rf.2980ae8dcb362b86574a520a4d3a9b8a.txt  accel2_mp4-11_jpg.rf.9391f33b8d3d449ab8a58611eebf14d5.txt  accel2_mp4-11_jpg.rf.de96d4f9c176081e8f24cf79ae3d1c50.txt  accel2_mp4-12_jpg.rf.1901a911bbf874d28352b29194984212.txt  accel2_mp4-12_jpg.rf.1d8d3b7e2e6421f6fe1a1a6bb0b71eb1.txt  accel2_mp4-12_jpg.rf.406e8da8559d654e1a7dcf780e83c172.txt  accel2_mp4-15_jpg.rf.0fad40e06ff1ac151871ba89e9a88e85.txt  accel2_mp4-15_jpg.rf.5bfd61d6d6768c80795db4df434fd5ff.txt  accel2_mp4-15_jpg.rf.f4a106427091aac48700fe21770b3482.txt  accel2_mp4-17_jpg.rf.6432c30e38385f4999a36c5019b8e3d6.txt  accel2_mp4-17_jpg.rf.6a5da18182a1dc2eb39aa8fd97d8f3ea.txt  accel2_mp4-17_jpg.rf.f16d5dde8d840f8aa70b7d676fbb8017.txt  accel2_mp4-1_jpg.rf.434234f6e7996c76ffabb517e5408731.txt  accel2_mp4-1_jpg.rf.483766af7f9e96add2a7ca0cd440e80f.txt  accel2_mp4-1_jpg.rf.5e9a568d9ed70016cacd9505644a9ccc.txt  accel2_mp4-20_jpg.rf.309bafa4db37f337b99ccb7ee7489206.txt  accel2_mp4-20_jpg.rf.3588766726233c9afe2205c23dcfa9c7.txt  accel2_mp4-20_jpg.rf.b96923f58f5d8f7e93755394a8a08bbf.txt  accel2_mp4-21_jpg.rf.5c0b041e04f32d2df1869fad27f4a748.txt  accel2_mp4-21_jpg.rf.6bd5c957e0a4ddede2bca5432431146b.txt  accel2_mp4-21_jpg.rf.993e73794da422e1672ab0a98d4ab33c.txt  accel2_mp4-22_jpg.rf.3746f741951138628f5d42b0d23048b7.txt  accel2_mp4-22_jpg.rf.f02d95a457046c44b86d9db3433e45e3.txt  accel2_mp4-22_jpg.rf.f87d5b6e6a8ae52d7d988fc0f2dc3711.txt  accel2_mp4-23_jpg.rf.05843bc7ed3e9f130c8bc76d38f4d89e.txt  accel2_mp4-23_jpg.rf.ba7fd591e560deed1a6fa5edf7eca4a4.txt  accel2_mp4-23_jpg.rf.bad2eab0305525ed5f28991e3b4fd32b.txt  accel2_mp4-24_jpg.rf.00238301f4e383a06fb7471da1034d1d.txt  accel2_mp4-24_jpg.rf.5a2c5c71be07a50f7cc5766a39635323.txt  accel2_mp4-24_jpg.rf.891f8470c1d279ee28f167ca8d1722bc.txt  accel2_mp4-3_jpg.rf.225b6c32d23408d5fa768e08b49de168.txt  accel2_mp4-3_jpg.rf.43c7c71ea513c36c9e025e80af5bb274.txt  (+3587 more)
docs/ADR/: adr.tex
docs/Schematics/: README.md
docs/adr/: adr.tex
docs/adr/references/: references.bib
fsai_ws/: frames_2025-04-14_00.14.59.gv  frames_2025-04-14_00.18.19.gv  frames_2025-04-16_17.11.38.gv
fsai_ws/src/: main.py  path_planner.py
fsai_ws/src/abdul_code/: lidar_integration.py  main.py
fsai_ws/src/hydrakon_api/: CMakeLists.txt  package.xml
fsai_ws/src/hydrakon_api/include/hydrakon_api/: fs-ai_api.h  hydrakon_can_bridge.hpp
fsai_ws/src/hydrakon_api/src/: can.c  fs-ai_api.c  hydrakon_can.cpp  hydrakon_can_bridge.cpp  hydrakon_can_node.cpp
fsai_ws/src/hydrakon_can/: CMakeLists.txt  package.xml
fsai_ws/src/hydrakon_can/include/hydrakon_can/: hydrakon_can.hpp
fsai_ws/src/hydrakon_can/launch/: hydrakon_can_launch.py
fsai_ws/src/hydrakon_can/src/: hydrakon_can.cpp
fsai_ws/src/hydrakon_simulation/: package.xml  setup.cfg  setup.py
fsai_ws/src/joseph_code/: lidar_3d_visualizer.py
fsai_ws/src/my_carla_driver/: package.xml  setup.cfg  setup.py  setup.py.bak
runs/detect/train2/: args.yaml  results.csv
(+534 files in other folders)
